feat: Local edit & basic printing function
Add links to tools
Remove unnecessary modules

--- a/src/main/index.html
+++ b/src/main/index.html
@@ -10,7 +10,7 @@
 <body>
 <div id="bodyContent">
   <header class="header">
-    <button class="tag dark" id="pdf-button">Download PDF</button>
+    <a href="/generate-pdf" class="tag dark">Download PDF</a>
   </header>
   <section class="top">
     <img class="card square image" src="../resources/png/profile.png" alt="Profile">
@@ -58,8 +58,12 @@
               </span>
             </div>
             <ul>
-              <li>Strategy development and planning of campaigns that promote the business and generate genuine traffic</li>
-              <li>SEO Content Creation for Blogs, Website, Social media</li>
+              <li>
+                <p>Strategy development and planning of campaigns that promote the business and generate genuine traffic</p>
+              </li>
+              <li>
+                <p>SEO Content Creation for Blogs, Website, Social media</p>
+              </li>
             </ul>
           </span>
         </div>
@@ -71,9 +75,15 @@
               <p>Freelance</p>
             </div>
             <ul>
-              <li>Development of internal projects from scratch, product design of brands</li>
-              <li>Landing page, webapps and hybrid apps</li>
-              <li>Coordinating with outside agencies, art services, web designer, marketing, printers, and colleagues as necessary.</li>
+              <li>
+                <p>Development of internal projects from scratch, product design of brands</p>
+              </li>
+              <li>
+                <p>Landing page, webapps and hybrid apps</p>
+              </li>
+              <li>
+                <p>Coordinating with outside agencies, art services, web designer, marketing, printers, and colleagues as necessary.</p>
+              </li>
             </ul>
           </span>
         </div>
@@ -89,67 +99,79 @@
               </span>
             </div>
             <ul>
-              <li>Provide administrative support to lawyer and enhance office effectiveness</li>
-              <li>Handle communication with clients, witnesses etc.</li>
-              <li>Repare case briefs and summarize depositions, interrogatories and testimony</li>
+              <li>
+                <p>Provide administrative support to lawyer and enhance office effectiveness</p>
+              </li>
+              <li>
+                <p>Handle communication with clients, witnesses etc.</p>
+              </li>
+              <li>
+                <p>Repare case briefs and summarize depositions, interrogatories and testimony</p>
+              </li>
             </ul>
           </span>
         </div>
       </section>
     </div>
-    <div class="card wide titled">
+    <div class="card titled">
       <h1>Tools</h1>
       <span class="vertical-group">
         <div class="card tools">
-          <div class="tag dark small top-center">design</div>
+          <div class="tag dark small top-center">
+            <p>design</p>
+          </div>
           <section class="tiles">
-            <a href="">
+            <a href="https://www.figma.com/" target="_blank">
               <img src="../resources/svg/design/figma.svg" alt="Figma">
             </a>
-            <a href="https://www.adobe.com/products/photoshop.html">
+            <a href="https://www.adobe.com/products/photoshop.html" target="_blank">
               <img src="../resources/svg/design/photoshop.svg" alt="Adobe Photoshop">
             </a>
-            <a href="">
+            <a href="https://www.adobe.com/products/illustrator.html" target="_blank">
               <img src="../resources/svg/design/illustrator.svg" alt="AdobeIllustrator">
             </a>
-            <a href="">
+            <a href="https://www.adobe.com/products/premiere.html" target="_blank">
               <img src="../resources/svg/design/premiere.svg" alt="Adobe Premiere">
             </a>
-            <a href="">
+            <a href="https://www.notion.com/" target="_blank">
               <img src="../resources/svg/design/notion.svg" alt="Notion">
             </a>
-            <a href="">
+            <a href="https://meet.google.com/" target="_blank">
               <img src="../resources/svg/design/meet.svg" alt="Google Meet">
             </a>
           </section>
         </div>
-        <div class="card tools ">
-          <div class="tag dark small top-center">no-code</div>
+        <div class="card tools">
+          <div class="tag dark small top-center">
+            <p>no-code</p>
+          </div>
           <section class="tiles">
-            <a href="">
+            <a href="https://zapier.com/" target="_blank">
               <img src="../resources/svg/no-code/zapier.svg" alt="Zapier">
             </a>
-            <a href="">
+            <a href="https://webflow.com/" target="_blank">
               <img src="../resources/svg/no-code/webflow.svg" alt="Webflow">
             </a>
-            <a href="">
+            <a href="https://www.framer.com/" target="_blank">
               <img src="../resources/svg/no-code/framer.svg" alt="Framer">
             </a>
-            <a href="">
+            <a href="https://wordpress.org/" target="_blank">
               <img src="../resources/svg/no-code/wordpress.svg" alt="WordPress">
             </a>
           </section>
         </div>
         <div class="card tools">
-          <div class="tag dark small top-center">artificial intelligence</div>
+          <div class="tag dark small top-center">
+            <p>artificial intelligence</p>
+          </div>
           <section class="tiles">
-            <a href="">
+            <a href="https://openai.com/index/chatgpt/" target="_blank">
               <img src="../resources/svg/ai/chatgpt.svg" alt="ChatGPT">
             </a>
-            <a href="">
+            <a href="https://microsoft.ai/product/copilot/" target="_blank">
               <img src="../resources/svg/ai/copilot.svg" alt="Microsoft Copilot">
             </a>
-            <a href="">
+            <a href="https://www.midjourney.com/home" target="_blank">
               <img src="../resources/svg/ai/midjourney.svg" alt="Midjourney">
             </a>
           </section>
@@ -170,14 +192,30 @@
             <section class="education-content">
               <h2>UI/UX</h2>
               <span class="tag-line small accent">
-                <div class="tag">#UX</div>
-                <div class="tag">#UI</div>
-                <div class="tag">#research</div>
-                <div class="tag">#DesignSystem</div>
-                <div class="tag">#Ui</div>
-                <div class="tag">#wireframing</div>
-                <div class="tag">#figma</div>
-                <div class="tag">#Ux</div>
+                <div class="tag">
+                  <p>#UX</p>
+                </div>
+                <div class="tag">
+                  <p>#UI</p>
+                </div>
+                <div class="tag">
+                  <p>#research</p>
+                </div>
+                <div class="tag">
+                  <p>#DesignSystem</p>
+                </div>
+                <div class="tag">
+                  <p>#Ui</p>
+                </div>
+                <div class="tag">
+                  <p>#wireframing</p>
+                </div>
+                <div class="tag">
+                  <p>#figma</p>
+                </div>
+                <div class="tag">
+                  <p>#Ux</p>
+                </div>
               </span>
             </section>
             <p>Coursrea</p>
@@ -187,10 +225,18 @@
             <section class="education-content">
               <h2>Graphic design</h2>
               <span class="tag-line small">
-                <div class="tag">#branding</div>
-                <div class="tag">#web</div>
-                <div class="tag">#illustration</div>
-                <div class="tag">#asobe</div>
+                <div class="tag">
+                  <p>#branding</p>
+                </div>
+                <div class="tag">
+                  <p>#web</p>
+                </div>
+                <div class="tag">
+                  <p>#illustration</p>
+                </div>
+                <div class="tag">
+                  <p>#adobe</p>
+                </div>
               </span>
             </section>
             <p>Coursrea</p>
@@ -201,10 +247,18 @@
           <section class="education-content">
             <h2>Law</h2>
             <span class="tag-line small">
-              <div class="tag">#law</div>
-              <div class="tag">#legalStudies</div>
-              <div class="tag">#contracts</div>
-              <div class="tag">#internationalLaws</div>
+              <div class="tag">
+                <p>#law</p>
+              </div>
+              <div class="tag">
+                <p>#legalStudies</p>
+              </div>
+              <div class="tag">
+                <p>#contracts</p>
+              </div>
+              <div class="tag">
+                <p>#internationalLaws</p>
+              </div>
             </span>
           </section>
           <p>University of Kerala</p>
@@ -215,16 +269,36 @@
       <div class="card wide titled">
         <h1>Interests</h1>
         <span class="tag-line">
-          <div class="tag">branding</div>
-          <div class="tag">design</div>
-          <div class="tag">photography</div>
-          <div class="tag">artificial intelligence</div>
-          <div class="tag">illustration</div>
-          <div class="tag">typography</div>
-          <div class="tag">social networks</div>
-          <div class="tag">research</div>
-          <div class="tag">drone pilot</div>
-          <div class="tag">games</div>
+          <div class="tag">
+            <p>branding</p>
+          </div>
+          <div class="tag">
+            <p>design</p>
+          </div>
+          <div class="tag">
+            <p>photography</p>
+          </div>
+          <div class="tag">
+            <p>artificial intelligence</p>
+          </div>
+          <div class="tag">
+            <p>illustration</p>
+          </div>
+          <div class="tag">
+            <p>typography</p>
+          </div>
+          <div class="tag">
+            <p>social networks</p>
+          </div>
+          <div class="tag">
+            <p>research</p>
+          </div>
+          <div class="tag">
+            <p>drone pilot</p>
+          </div>
+          <div class="tag">
+            <p>games</p>
+          </div>
         </span>
       </div>
       <div class="card wide titled dark extra">
