fix: Cookies are received by backend
Fix animation & layout for editing

--- a/src/main/index.html
+++ b/src/main/index.html
@@ -10,6 +10,7 @@
 <body>
 <div id="bodyContent">
   <header class="header">
+    <button class="tag dark" style="cursor: pointer;">Clear local changes</button>
     <a href="/generate-pdf" class="tag dark">Download PDF</a>
   </header>
   <section class="top">
@@ -29,7 +30,7 @@
           <p class="language-name">Malayalam</p>
           <p class="language-name">Hindi</p>
         </span>
-        <span class="vertical-group small">
+        <span class="vertical-group small wide">
           <div class="language-level" style="width: 100%;"></div>
           <div class="language-level" style="width: 100%;"></div>
           <div class="language-level" style="width: 80%;"></div>
