fix: Recolor elements & adjust layout

--- a/src/main/index.html
+++ b/src/main/index.html
@@ -77,7 +77,9 @@
           <div class="horizontal-group">
             <div class="job-info">
               <h2>Graphic / Web designer</h2>
-              <p>Freelance</p>
+              <div class="about-job">
+                <p>Freelance</p>
+              </div>
             </div>
             <ul>
               <li>
@@ -241,7 +243,6 @@
           <p class="tag">photography</p>
           <p class="tag">artificial intelligence</p>
           <p class="tag">illustration</p>
-          <p class="tag">web design</p>
           <p class="tag">typography</p>
           <p class="tag">social networks</p>
           <p class="tag">research</p>
