feat: Add Material Waves effect
Fix layout to work with new effect

--- a/src/main/index.html
+++ b/src/main/index.html
@@ -10,11 +10,11 @@
 <body>
 <div id="bodyContent">
   <header class="header">
-    <a href="" class="tag dark">Clear local changes</a>
-    <a href="/generate-pdf" class="tag dark">Download PDF</a>
+    <a href="" class="tag dark button">Clear local changes</a>
+    <a href="/generate-pdf" class="tag dark button">Download PDF</a>
   </header>
   <div class="top">
-    <img class="card square image" src="../resources/png/profile.png" alt="Profile">
+    <div class="card image"></div>
     <article class="card square your-info">
       <h2>Hello 👋🏻 I’m</h2>
       <div class="your-info">
@@ -123,9 +123,9 @@
     <article class="card titled tools">
       <h1>Tools</h1>
       <div class="vertical-group">
-        <article class="card tools-inner">
+        <article class="tiles">
           <h5 class="tag dark small top-center">design</h5>
-          <div class="tiles">
+          <div class="card tools-inner">
             <a href="https://www.figma.com/" target="_blank">
               <img src="../resources/svg/design/figma.svg" alt="Figma">
             </a>
@@ -146,9 +146,9 @@
             </a>
           </div>
         </article>
-        <article class="card tools-inner">
+        <article class="tiles">
           <h5 class="tag dark small top-center">no-code</h5>
-          <div class="tiles">
+          <div class="card tools-inner">
             <a href="https://zapier.com/" target="_blank">
               <img src="../resources/svg/no-code/zapier.svg" alt="Zapier">
             </a>
@@ -163,9 +163,9 @@
             </a>
           </div>
         </article>
-        <article class="card tools-inner">
+        <article class="tiles">
           <h5 class="tag dark small top-center">artificial intelligence</h5>
-          <div class="tiles">
+          <div class="card tools-inner">
             <a href="https://openai.com/index/chatgpt/" target="_blank">
               <img src="../resources/svg/ai/chatgpt.svg" alt="ChatGPT">
             </a>
