--- a/src/main/index.html
+++ b/src/main/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CV V1</title>
+  <link rel="preload" fetchpriority="high" as="image" href="../resources/webp/profile.webp" type="image/webp">
   <link rel="stylesheet" href="style.css">
   <script type="module" src="script.js"></script>
 </head>
